cmake_minimum_required(VERSION 3.7)
project(Project)

enable_testing()
set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
set (CMAKE_CXX_STANDARD 14)

add_subdirectory(Threads)
add_subdirectory(Visitor)
add_subdirectory(address_sanitizer)
add_subdirectory(cond_var)
add_subdirectory(fork-exec)
add_subdirectory(imaginary)
add_subdirectory(ld_preload)
add_subdirectory(sqlite)
add_subdirectory(template_class)
add_subdirectory(modules)
add_subdirectory(pimpl)
add_subdirectory(unit_types)
add_subdirectory(lohmann_unicode)
